--- a/src/App.css
+++ b/src/App.css
@@ -366,6 +366,28 @@ html {
   background-color: var(--color-pokemon-poison);
 }
 
+/* custom scroll */
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #666; 
+}
+
+/* Page Home */
 .page {
   font-family: var(--font-family);
   background-color: var(--color-white);
@@ -402,4 +424,68 @@ html {
 
 .grid-item {
   position: relative;
+}
+
+/* Page Detail */
+.page-detail{
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: var(--screen-sm);
+  width: 100%;
+  height: 100vh;
+}
+
+.page-detail__header{
+  display: flex;
+}
+
+.header-button{
+  padding: var(--spacing-3) var(--spacing-4);
+  cursor: pointer;
+}
+
+.header-title{
+  font-weight: var(--font-weight-bold);
+  text-transform: capitalize;
+  padding: var(--spacing-3) var(--spacing-4);
+}
+
+.page-detail__img img{
+  margin: auto;
+  width: 250px;
+}
+
+.page-detail__subtitle{
+  font-size: 12px;
+  line-height: .5;
+}
+
+.page-detail__type{
+  display: flex;
+  padding: 0 var(--spacing-4);
+}
+
+.page-detail__panel{
+  --top: 48px;
+  position: fixed!important;
+  top: var(--top);
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: var(--screen-sm);
+  height: calc(100vh - var(--top));
+  padding-top: 50%;
+  overflow-y: scroll;
+}
+
+.panel{
+  background-color: #fff;
+  background-color: var(--color-white);
+  border-top-left-radius: var(--border-radius-xl);
+  border-top-right-radius: var(--border-radius-xl);
+  padding: var(--spacing-6) var(--spacing-6) var(--spacing-6);
+  min-height: calc(100vh - var(--top));
+  box-shadow: 2px 4px 15px 0 rgb(0 0 0 / 25%);
 }
