--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,16 @@ html {
   color: var(--color-white);
 }
 
+.offline-info{
+  position: fixed;
+  bottom: 0;
+  width: var(--screen-sm);
+  background-color: var(--color-yellow-500);
+  padding: var(--spacing-2) var(--spacing-4);
+  border-radius: var(--border-radius-md);
+  text-align: center;
+}
+
 /* custom scroll */
 /* width */
 ::-webkit-scrollbar {
